gitops/tenants/tenant2/base/ingress-services/inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      volumes:
      - name: flyway-scripts
        configMap:
          name: inventory-flyway-scripts
      containers:
      - name: inventory-service
        image: inventory-service:v0.0.4
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
