gitops/tenants/tenant2/base/ingress-services/ordering-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordering-service
  template:
    metadata:
      labels:
        app: ordering-service
    spec:
      volumes:
      - name: flyway-scripts
        configMap:
          name: ordering-flyway-scripts
      containers:
      - name: ordering-service
        image: ordering-service:v0.0.4
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
